add styles and media queries

--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
     </header>
     <main>
         <section>
-            <figure>
-                <img src="Images/responsive-layout-profile.png" alt="HOLD">
+            <figure class="profile">
+                <img src="Images/responsive-layout-profile.png" alt="HOLD for alt text">
             </figure>
             <p>LPost-ironic exercitation live-edge et ugh vaporware sriracha. Photo booth shoreditch hexagon veniam banh mi
                 hammock aute. Glossier yr leggings chia raclette godard mollit hell of chartreuse palo santo af biodiesel
                 3 wolf moon deep v.
             </p>
         </section>
-        <section>
+        <section class="intro">
             <h2 id="portfolio">Portfolio</h2>
-            <div>
+            <div class="portfolio-wrap">
                 <figure>
                     <img src="Images/portfolio-1.png" alt="HOLD for alt text">
                     <figcaption>
@@ -89,7 +89,7 @@
                 </figure>
             </div>
         </section>
-        <section>
+        <section class="contact">
             <h2 id="contact">Contact</h2>
             <p>
                 LPost-ironic exercitation live-edge et ugh vaporware sriracha. Photo booth shoreditch hexagon veniam banh mi hammock aute.
@@ -101,14 +101,14 @@
                     </section>
                     </main>
                     <footer>
-                        <div class="HOLD">
+                        <div class="footer">
                             <h2>Nora Peters</h2>
                             <nav>
                                 <ul>
-                                    <li class="HOLD"><a href="#home">Home</a></li>
-                                    <li class="HOLD"><a href="#portfolio">Portfolio</a></li>
-                                    <li class="HOLD"><a href="#contact">Contact</a></li>
-                                    <li class="HOLD"><a href="#home">Back To Top</a></li>
+                                    <li class="largenav"><a href="#home">Home</a></li>
+                                    <li class="largenav"><a href="#portfolio">Portfolio</a></li>
+                                    <li class="largenav"><a href="#contact">Contact</a></li>
+                                    <li class="mobilenav"><a href="#home">Back To Top</a></li>
                                 </ul>
                             </nav>
                         </div>
