--- a/index.html
+++ b/index.html
@@ -8,10 +8,24 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="normalize.css">
     <title>Responsive Layout Project</title>
 </head>
 
 <body>
+    <header>
+        <h1 id="home">Nora Peters</h1>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</li>
+                    <li><a href="#portfolio">Portfolio</li>
+                    <li><a href="#contact">Contact</li>
+                </ul>
+            </nav>
+    </header>
+</body>
+
+<!-- <body>
     <header>
         <h1 id="home">Nora Peters</h1>
         <nav>
@@ -34,7 +48,7 @@
         </section>
         <section class="intro">
             <h2 id="portfolio">Portfolio</h2>
-            <div class="portfolio-wrap">
+            <div class="wrapper">
                 <figure>
                     <img src="Images/portfolio-1.png" alt="HOLD for alt text">
                     <figcaption>
@@ -113,6 +127,6 @@
                             </nav>
                         </div>
                     </footer>
-</body>
+</body> -->
 
 </html>
